[tool.poetry]
name = "unittest"
version = "0.1.0"
description = ""
authors = ["RosGus80 <124379507+RosGus80@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
coverage = "7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
